# JacobianCore

./: .gitignore  LICENSE  README.md
JacobianCore/: CMakeLists.txt  CMakeSettings.json
JacobianCore/JacobianCore/: CMakeLists.txt  DebugCPP.cpp  DebugCPP.h  J_Interface.cpp  J_Interface.h  JacobianCore.cpp  JacobianCore.h  JacobianEx.cpp  JacobianJig.cpp  JitModules.cpp  TandomTest.cpp
JacobianCore/JacobianCore/jit_models/: PlanarArm.pt  control_flow_model.pt  relu_function.pt
JacobianJig/: CMakeLists.txt
JacobianJig/JacobianJig/: CMakeLists.txt  JacobianJig.cpp  JacobianJig.h
python/: control_flow_model.pt  exporting_model_jit.py  jacobian.py  jacobian_jit.py  jacobian_model.pt  relu_function.pt
